# ha-aiper

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.codex/skills/perform-release/: SKILL.md
.github/workflows/: ci-cd.yaml  release.yaml  validation.yaml
custom_components/aiper/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  controller.py  coordinator.py  diagnostics.py  manifest.json  mqtt.py  profiles.py  select.py  sensor.py  state.py  strings.json  switch.py
docs/: discovery.md
docs/device-models/: README.md  scuba.md  shark.md  surfer.md  unknown.md
tests/: conftest.py  test_aiper_probe.py  test_api_clean_path.py  test_api_session.py  test_config_flow.py  test_controller.py  test_coordinator_push.py  test_diagnostics.py  test_integration_setup.py  test_mqtt.py  test_parsers.py  test_platform_entities.py  test_profiles.py  test_select.py  test_sensor_images.py  test_services.py  test_status.py
tools/: aiper_probe.py
tools/discovery_flows/: generic.yaml  surfer-s2.yaml
