[project]
name = "ha-aiper"
version = "0.8.4"
description = "Development tooling for the Aiper Home Assistant custom integration."
readme = "README.md"
requires-python = ">=3.14.2,<3.15"
dependencies = [
    "awsiotsdk>=1.29.0",
]

[dependency-groups]
dev = [
    "homeassistant",
    "mypy",
    "pyright>=1.1.409",
    "pytest",
    "pytest-homeassistant-custom-component",
    "pyyaml",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true

[tool.pyright]
reportIncompatibleVariableOverride = "none"
